...
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
...
            android:layout_height="wrap_content"
            android:layout_below="@id/bPrijava"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/twRegistracija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/face_login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/nemate_racun" />
...
